# fast-api-task

./: pyproject.toml
fastapi_task/: endpoints.py  main.py  schemas.py
